Fixes very bad rowspan.

--- a/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
+++ b/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
@@ -37,6 +37,11 @@
 		<DefaultLanguage>sv</DefaultLanguage>
 	</PropertyGroup>
 
+    <PropertyGroup>
+        <PublishTrimmed>false</PublishTrimmed>
+        <RunAOTCompilation>false</RunAOTCompilation>
+    </PropertyGroup>
+    
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'windows'"
