--- a/Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph.csproj
+++ b/Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph.csproj
@@ -8,9 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Graph" Version="4.48.0" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.48.1" />
-    <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.25.0" />
+    <PackageReference Include="Azure.Identity" Version="1.9.0" />
+    <PackageReference Include="Microsoft.Graph" Version="5.19.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.54.1" />
+    <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.31.0" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="7.0.0" />
   </ItemGroup>
 
