--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,7 +1,7 @@
 name: Build test
 
 on:
-
+  workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
@@ -17,7 +17,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 7.0.x
+        dotnet-version: 8.0.100-rc.2.23502.2
         
     - name: Install MAUI Workload
       run: dotnet workload install maui --ignore-failed-sources
