--- a/Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph.csproj
+++ b/Source/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph/Pekspro.RadioStorm.Settings.SynchronizedSettings.FileProvider.Graph.csproj
@@ -9,10 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.3" />
-    <PackageReference Include="Microsoft.Graph" Version="5.32.0" />
+    <PackageReference Include="Microsoft.Graph" Version="5.35.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.57.0" />
     <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="4.57.0" />
-    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0-rc.2.23479.6" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
