--- a/Source/Pekspro.RadioStorm.Sandbox.Common/Pekspro.RadioStorm.Sandbox.Common.csproj
+++ b/Source/Pekspro.RadioStorm.Sandbox.Common/Pekspro.RadioStorm.Sandbox.Common.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0-rc.2.23479.6" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
   </ItemGroup>
     
 </Project>
