--- a/Source/Pekspro.RadioStorm.Sandbox.Console/Pekspro.RadioStorm.Sandbox.Console.csproj
+++ b/Source/Pekspro.RadioStorm.Sandbox.Console/Pekspro.RadioStorm.Sandbox.Console.csproj
@@ -10,7 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.2.23479.6" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
