--- a/Source/Pekspro.RadioStorm.MAUI/Platforms/Android/AndroidManifest.xml
+++ b/Source/Pekspro.RadioStorm.MAUI/Platforms/Android/AndroidManifest.xml
@@ -18,5 +18,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 </manifest>
