Fixes some xaml warnings.

--- a/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
+++ b/Source/Pekspro.RadioStorm.MAUI/Pekspro.RadioStorm.MAUI.csproj
@@ -13,6 +13,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
         <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+        <MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
 
         <!-- Display name -->
 		<ApplicationTitle>RadioStorm</ApplicationTitle>
